<resources>
    <string name="app_name">My Application</string>

    <string name="nom">Last Name</string>
    <string name="prénom">First Name</string>
    <string name="competences">Skills</string>
    <string name="age">Age</string>
    <string name="telephone">Phone Number</string>
    <string name="text_submit">Submit</string>

    <string name="dialog_titre">Confirmation</string>
    <string name="dialog_message">Do you really want to validate this information?</string>
    <string name="btn_valider">Validate</string>
    <string name="btn_annuler">Cancel</string>

    <string name="msg_validation_ok">Input validated!</string>
    <string name="msg_action_annulee">Action cancelled</string>
    <string name="recap_titre">Summary</string>
    <string name="recap_nom">Last Name: </string>
    <string name="recap_prenom">First Name: </string>
    <string name="recap_age">Age: </string>
    <string name="recap_skills">Skills: </string>
    <string name="recap_phone">Phone: </string>
    <string name="btn_retour">Back</string>
    <string name="btn_ok">OK</string>

    <string name="final_message">Congratulations! Process completed.</string>
</resources>